[package]
edition = '2021'
name = "ton_executor"
version = "2.0.0"

[dependencies]
tycho-vm = { git = "https://github.com/broxus/tycho-vm.git" }
everscale-types = { version = "0.1.2", features = ["stats"] }

# External
ahash = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
num-bigint = "0.4"

[patch.crates-io]
everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "d8d573db4054b5343f3d5579b40ae2b99776b222" }
everscale-types-proc = { git = "https://github.com/broxus/everscale-types.git", rev = "d8d573db4054b5343f3d5579b40ae2b99776b222" }
